# current-song

./: Cargo.toml  README.md  config.json  test_filetime.rs
.github/workflows/: ci.yml  release.yml
src/: config.rs  main.rs  models.rs  mpris_reader.rs  server.rs  tray.rs
src/media_reader/: linux.rs  mod.rs  tests.rs  windows.rs
static/: customize.css  customize.html  customize.js  overlay.css  overlay.html  overlay.js
