[package]
name = "currentsong"
version = "0.1.1"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
futures = "0.3"
image = "0.25"
lazy_static = "1.4"

[target.'cfg(target_os = "linux")'.dependencies]
mpris = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61", features = [
    "Media_Control",
    "Storage_Streams",
    "Foundation",
] }
